--- a/desafios/d012/estilos/style.css
+++ b/desafios/d012/estilos/style.css
@@ -1,13 +1,18 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
-
+:root {
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: "Passion One", sans-serif;
+    --fonte03: "Sriracha", cursive;
+}
 html, body {
     min-height: 100vh;
+    font-size: 1em;
 }
 
 header {
@@ -16,27 +21,29 @@ header {
     background-color: rgb(37, 33, 33);
 }
 header > h1 {
+    font-family: var(--fonte02);
     padding-top: 50px;
     font-variant: small-caps;
     font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
-    font-size: 4vw;
 }
 
 section {
+    font-family: var(--fonte03);
     padding-top: 10vh;
     padding-left: 30px;
     padding-bottom: 10vh;
     line-height: 2em;
+    font-size: 3vw;
 }
 section.normal {
     background-color: white;
     color: black;
 }
-section>p {
-    padding: 25px;
+section > p {
+    padding-bottom: 2em;
     text-align: left;
     
 }
@@ -48,8 +55,9 @@ section#imagem01 {
     background-attachment: fixed;
 }
 section#imagem01 > p {
+    display: inline-block;
+    padding: 1px;
     background-color: rgba(0, 0, 0, 0.541);
-    max-width: 400px;
     color: white;
 }
 section#imagem02{
