--- a/exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/exercicios/ex026/mq004/estilos/mediaquery.css
@@ -2,6 +2,71 @@
 
 /*Versão todas midias*/
 
-@media print{
+/*
+Typical device breakpoints
+--------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: de 768px até 992px
+Desktop: de 992px até 1200px
+Grande telas: acima de 1200px
+*/
+
+@media print {
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body{
+        background-image: url(../imagens/back-print.jpg);/*Desnecessario*/
+    }
+
+    main{
+        border: 2px solid black;
+    }
+
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+    img#pc{display: none;}
+    img#phone{display: none;}
+    img#print{display: block;}
+    img#tablet{display: none;}
+    img#tv{display: none;}
+    
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px){ /*Tablet*/
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#pc{display: none;}
+    img#phone{display: none;}
+    img#print{display: none;}
+    img#tablet{display: block;}
+    img#tv{display: none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /*Desktop*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#pc{display: block;}
+    img#phone{display: none;}
+    img#print{display: none;}
+    img#tablet{display: none;}
+    img#tv{display: none;}
+}
+
+@media screen and (min-width: 1200px) { /*Grandes telas*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#pc{display: none;}
+    img#phone{display: none;}
+    img#print{display: none;}
+    img#tablet{display: none;}
+    img#tv{display: block;}
     
 }
